Fix cutoff text for exams in schedules
Enabled text wrapping on the course code. This may require a bit more
playing with to make it look nicer, but it appears to do the trick.

--- a/server/static/sass/_schedule.scss
+++ b/server/static/sass/_schedule.scss
@@ -62,6 +62,7 @@ $toolbarBg: #FAFAFA;
     .course-code {
       font-weight: bold;
       color: $textColor;
+      white-space: normal;
     }
   }
 
